--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div><a  target="_blank" class="btn btn-primary btn-lg color=#FF0000" ><b>【企业版更新中】</b></a></div>
 
                     
-<!--div><a href="https://www.lanzouy.com/s/bkx168" target="_blank" class="btn btn-primary btn-lg color=#FF0000" ><b>【安装→贝肯熊企业版】</b></a></div-->
+<!--div><a href="https://www.lanzouy.com/s/bkx" target="_blank" class="btn btn-primary btn-lg color=#FF0000" ><b>【安装→贝肯熊企业版】</b></a></div-->
                  <div><a href="http://code.bkx.ipa8.cn/" target="_blank" class="btn btn-primary btn-lg color=#FF0000" ><b>激活码查询</b></a></div>
                 <div>
                 <!-- 底部图片 -->
